--- a/styles/main.scss
+++ b/styles/main.scss
@@ -28,7 +28,7 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size: 1.1rem;
     color:var(--color-white)
-    transition: all .4s ease-in-out;
+  
 }
 a{
     display:inline-block;
@@ -48,4 +48,29 @@ section{
     left: 0;
     top: 0;
     padding: 3rem 18rem;
+}
+.section{
+    transform: translateY(-100%)scale(0);
+    transition: all .4s ease-in-out;
+    background-color: var(--color-primary);
+}
+.sec1{
+    display: none;
+    transform: translateY(0)scale(1)
+}
+.sec2{
+    display: none;
+    transform: translateY(0)scale(1)
+}
+.sec3{
+    display: none;
+    transform: translateY(0)scale(1)
+}
+.sec4{
+    display: none;
+    transform: translateY(0)scale(1)
+}
+.sec5{
+    display: none;
+    transform: translateY(0)scale(1)
 }
