--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,6 +18,7 @@
    --color-grey-5: #2a2e35;
    --color-grey-6: #12181b;
    --br-sm-2: 14px; 
+   --box-shadow-1: 0 3px 15px rgba(0,0,0,.3)
 
 
 
@@ -28,7 +29,7 @@ body{
     font-family: 'Poppins', sans-serif;
     font-size: 1.1rem;
     color:var(--color-white)
-  
+    //transition: all .4s ease-in-out;
 }
 a{
     display:inline-block;
@@ -73,4 +74,43 @@ section{
 .sec5{
     display: none;
     transform: translateY(0)scale(1)
+}
+
+// conrols 
+.controls{
+    position:fixed;
+    z-index: 10;
+    top: 50%;
+    right: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-50%);
+    .active-btn{
+        background-color: var(--color-secondary) !important;
+        transition: all .4s ease-in-out;
+        i{
+            color: var(--color-white)!important ;
+        }
+    }
+    .control{
+        padding: 1rem;
+        cursor: pointer;
+        background-color: var(--color-grey-4);
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: .7rem 0;
+        box-shadow: var(--box-shadow-1);
+        i{
+            font-size: 1.2rem;
+            color: var(--color-grey-2);
+            pointer-events: none;
+        }
+    } 
+
 }
